list card design + icon panel functionality + started upload form

--- a/recipe_app/recipe_app/templates/recipe_app/layout.html
+++ b/recipe_app/recipe_app/templates/recipe_app/layout.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -49,13 +49,11 @@
         </nav>
     </header>
 
-    <div style="display: flex; justify-content: center;">
+    <div style="display: flex; justify-content: center; font-size: 1.2rem; font-weight: 500;">
         {% block header-middle %}
         {% endblock header-middle %}
-    </div>
-
-    {% if messages %}
-        <div class="messages">
+        {% if messages %}
+        <div class="messages" style="margin-top: 1rem; margin-bottom: 1rem;">
             {% for message in messages %}
             <div class="alert alert-{% if message.tags %}{{ message.tags }}{% endif %}">
                 {{ message }}
@@ -63,6 +61,9 @@
             {% endfor %}
         </div>
     {% endif %}
+    </div>
+
+
 
     <main>
         <!-- Main content -->
@@ -78,14 +79,20 @@
             <div class="navbar-list">
                 <a href="{% url 'recipes:explore' %}">
                     <div class="navlink-mobile">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.3" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-search"><circle cx="11" cy="11" r="8"/><path d="m21 21-4.3-4.3"/></svg>
-                            <span>Entdecken</span>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.3" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-search"><circle cx="11" cy="11" r="8"/><path d="m21 21-4.3-4.3"/></svg>
+                        <span>Entdecken</span>
+                    </div>
+                </a>
+                <a href="{% url 'recipes:write' %}">
+                    <div class="navlink-mobile">                      
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-square-pen"><path d="M12 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"/><path d="M18.375 2.625a1 1 0 0 1 3 3l-9.013 9.014a2 2 0 0 1-.853.505l-2.873.84a.5.5 0 0 1-.62-.62l.84-2.873a2 2 0 0 1 .506-.852z"/></svg>    
+                        Verfassen                       
                     </div>
                 </a>
                 <a href="{% url 'recipes:generate' %}">
                     <div class="navlink-mobile">                      
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-sparkle"><path d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"/></svg>
-                            Generieren                       
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-sparkle"><path d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"/></svg>
+                        Generieren                       
                     </div>
                 </a>
                 <a href="{% url 'recipes:library' %}">
