--- a/recipe_app/chefs/static/registration/css/styles.css
+++ b/recipe_app/chefs/static/registration/css/styles.css
@@ -32,6 +32,7 @@ input {
     background-color: whitesmoke;
     border: 1px solid var(--icon-color);
     background-color: var(--element-color);
+    width: 100%;
 }
 
 form {
